// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup matches snapshot when is has a value 1`] = `
.css-1elznsz-RadioGroup__radioGroup {
  display: inline-block;
}

.css-58u9gy-RadioGroup__radioWrapper {
  margin-bottom: 8px;
}

.css-bhn1qj-RadioGroup__root {
  position: relative;
  display: inline-block;
}

.css-qmc5y8-RadioGroup__wrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.css-qmc5y8-RadioGroup__wrapper:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-kh56q0-RadioGroup__radio {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-26p36d-RadioGroup__input {
  visibility: hidden;
}

.css-26p36d-RadioGroup__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-26p36d-RadioGroup__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-26p36d-RadioGroup__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-26p36d-RadioGroup__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-3nzuv7-RadioGroup__label {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.css-3nzuv7-RadioGroup__label:hover {
  cursor: pointer;
}

.css-w8yzjk-RadioGroup__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.css-15rdos3-RadioGroup__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-15rdos3-RadioGroup__iconLabel > i {
  font-size: 0.8rem;
}

.css-uxniji-Icon__root-Icon__bold {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="css-1elznsz-RadioGroup__radioGroup"
>
  <div>
    <div
      className="css-58u9gy-RadioGroup__radioWrapper"
    >
      <div
        className="css-bhn1qj-RadioGroup__root"
      >
        <label
          className="css-qmc5y8-RadioGroup__wrapper"
          htmlFor={1}
        >
          <div
            className="css-kh56q0-RadioGroup__radio"
          >
            <input
              checked={true}
              className="css-26p36d-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="css-w8yzjk-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-15rdos3-RadioGroup__iconLabel"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check css-uxniji-Icon__root-Icon__bold"
                />
              </label>
            </div>
          </div>
          <label
            className="css-3nzuv7-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="css-58u9gy-RadioGroup__radioWrapper"
    >
      <div
        className="css-bhn1qj-RadioGroup__root"
      >
        <label
          className="css-qmc5y8-RadioGroup__wrapper"
          htmlFor={1}
        >
          <div
            className="css-kh56q0-RadioGroup__radio"
          >
            <input
              checked={false}
              className="css-26p36d-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="css-w8yzjk-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-15rdos3-RadioGroup__iconLabel"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check css-uxniji-Icon__root-Icon__bold"
                />
              </label>
            </div>
          </div>
          <label
            className="css-3nzuv7-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup matches snapshot when is has no value 1`] = `
.css-1elznsz-RadioGroup__radioGroup {
  display: inline-block;
}

.css-58u9gy-RadioGroup__radioWrapper {
  margin-bottom: 8px;
}

.css-bhn1qj-RadioGroup__root {
  position: relative;
  display: inline-block;
}

.css-qmc5y8-RadioGroup__wrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.css-qmc5y8-RadioGroup__wrapper:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-kh56q0-RadioGroup__radio {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-26p36d-RadioGroup__input {
  visibility: hidden;
}

.css-26p36d-RadioGroup__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-26p36d-RadioGroup__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-26p36d-RadioGroup__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-26p36d-RadioGroup__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-3nzuv7-RadioGroup__label {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.css-3nzuv7-RadioGroup__label:hover {
  cursor: pointer;
}

.css-w8yzjk-RadioGroup__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.css-15rdos3-RadioGroup__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-15rdos3-RadioGroup__iconLabel > i {
  font-size: 0.8rem;
}

.css-uxniji-Icon__root-Icon__bold {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="css-1elznsz-RadioGroup__radioGroup"
>
  <div>
    <div
      className="css-58u9gy-RadioGroup__radioWrapper"
    >
      <div
        className="css-bhn1qj-RadioGroup__root"
      >
        <label
          className="css-qmc5y8-RadioGroup__wrapper"
          htmlFor={1}
        >
          <div
            className="css-kh56q0-RadioGroup__radio"
          >
            <input
              checked={false}
              className="css-26p36d-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="css-w8yzjk-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-15rdos3-RadioGroup__iconLabel"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check css-uxniji-Icon__root-Icon__bold"
                />
              </label>
            </div>
          </div>
          <label
            className="css-3nzuv7-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="css-58u9gy-RadioGroup__radioWrapper"
    >
      <div
        className="css-bhn1qj-RadioGroup__root"
      >
        <label
          className="css-qmc5y8-RadioGroup__wrapper"
          htmlFor={1}
        >
          <div
            className="css-kh56q0-RadioGroup__radio"
          >
            <input
              checked={false}
              className="css-26p36d-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="css-w8yzjk-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-15rdos3-RadioGroup__iconLabel"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check css-uxniji-Icon__root-Icon__bold"
                />
              </label>
            </div>
          </div>
          <label
            className="css-3nzuv7-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup matches snapshot when is read only 1`] = `
.css-z8uzdf-Icon__root {
  color: inherit;
}

.css-1elznsz-RadioGroup__radioGroup {
  display: inline-block;
}

.css-58u9gy-RadioGroup__radioWrapper {
  margin-bottom: 8px;
}

.css-bhn1qj-RadioGroup__root {
  position: relative;
  display: inline-block;
}

.css-kh56q0-RadioGroup__radio {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-26p36d-RadioGroup__input {
  visibility: hidden;
}

.css-26p36d-RadioGroup__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-26p36d-RadioGroup__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-26p36d-RadioGroup__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-26p36d-RadioGroup__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-3nzuv7-RadioGroup__label {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.css-3nzuv7-RadioGroup__label:hover {
  cursor: pointer;
}

.css-w8yzjk-RadioGroup__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.css-15rdos3-RadioGroup__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-15rdos3-RadioGroup__iconLabel > i {
  font-size: 0.8rem;
}

.css-kafxhh-RadioGroup__wrapper-RadioGroup__readOnly {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
  pointer-events: none;
}

.css-kafxhh-RadioGroup__wrapper-RadioGroup__readOnly:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-kafxhh-RadioGroup__wrapper-RadioGroup__readOnly [data-element="sprite"] {
  background: #eaeff4 !important;
}

.css-kafxhh-RadioGroup__wrapper-RadioGroup__readOnly [data-element="locked-icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #879ba6;
}

<div
  className="css-1elznsz-RadioGroup__radioGroup"
>
  <div>
    <div
      className="css-58u9gy-RadioGroup__radioWrapper"
    >
      <div
        className="css-bhn1qj-RadioGroup__root"
      >
        <label
          className="css-kafxhh-RadioGroup__wrapper-RadioGroup__readOnly"
          htmlFor={1}
        >
          <div
            className="css-kh56q0-RadioGroup__radio"
          >
            <input
              checked={true}
              className="css-26p36d-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="css-w8yzjk-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-15rdos3-RadioGroup__iconLabel"
                data-element="locked-icon"
              >
                <i
                  className="css-z8uzdf-Icon__root Drycon Drycon-lock"
                />
              </label>
            </div>
          </div>
          <label
            className="css-3nzuv7-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="css-58u9gy-RadioGroup__radioWrapper"
    >
      <div
        className="css-bhn1qj-RadioGroup__root"
      >
        <label
          className="css-kafxhh-RadioGroup__wrapper-RadioGroup__readOnly"
          htmlFor={1}
        >
          <div
            className="css-kh56q0-RadioGroup__radio"
          >
            <input
              checked={false}
              className="css-26p36d-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="css-w8yzjk-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-15rdos3-RadioGroup__iconLabel"
                data-element="locked-icon"
              >
                <i
                  className="css-z8uzdf-Icon__root Drycon Drycon-lock"
                />
              </label>
            </div>
          </div>
          <label
            className="css-3nzuv7-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;
